--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,21 +6,30 @@ qfapi = "5.0.0-alpha.9+0.72.0-1.19.3"
 qkl = "1.1.0+kt.1.8.0+flk.1.9.0"
 loader = "0.17.8"
 mappings = "1.19.3+build.9"
-loom = "1.+"
+loom = "1.0.+"
+
+markt = "1.4"
+sgui = "1.2.1+1.19.3"
+
+serialization = "1.8.0"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
-qfapi = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "qfapi" }
-qfapi_deprecated = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api-deprecated", version.ref = "qfapi" }
-
-
-qkl = { module = "org.quiltmc.quilt-kotlin-libraries:quilt-kotlin-libraries", version.ref = "qkl" }
-quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "loader" }
 quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "mappings" }
 
+qfapi = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "qfapi" }
+qkl = { module = "org.quiltmc.quilt-kotlin-libraries:quilt-kotlin-libraries", version.ref = "qkl" }
+quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "loader" }
+
+markt = { module = "dev.proxyfox:MarKt", version.ref = "markt" }
+sgui = { module = "eu.pb4:sgui", version.ref = "sgui" }
+
 [bundles]
-quilted_fabric_api = ["qfapi", "qfapi_deprecated"]
+quilt = ["qfapi", "qkl", "quilt_loader"]
+external = ["markt"]
+include = ["sgui"]
 
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 quilt_loom = { id = "org.quiltmc.loom", version.ref = "loom" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
